// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TemplateWithSidePanel matches snapshot with a document 1`] = `
<DocumentFragment>
  .c0 {
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  width: 100%;
  border-top: 1px solid #c0cfde;
  background-color: #f2f5f8;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  background-color: #f2f5f8;
}

@media (min-width:68.75em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    height: 100%;
    overflow: none;
  }
}

@media (min-width:68.75em) {
  .c1 {
    max-width: 990px;
    margin-left: auto;
    margin-right: auto;
    padding: 16px;
    height: calc(100vh - 80px);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      height="80px"
    >
      <img
        class="ui image"
        src="data:image/png;base64, iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mOs1Vv6HwAE0QJRJ/jTdwAAAABJRU5ErkJggg=="
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TemplateWithSidePanel matches snapshot with a template and a side panel 1`] = `
<DocumentFragment>
  .c8 {
  background: rgba(148,109,192,0.4);
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  text-transform: uppercase;
}

.c5 {
  width: 100%;
  padding: 8px;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c6 {
  margin-left: auto;
}

.c7 {
  margin-top: 2px;
  padding: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #c0cfde;
  background-color: white;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
  height: 100%;
  width: 100%;
}

.c0 {
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  width: 100%;
  border-top: 1px solid #c0cfde;
  background-color: #f2f5f8;
}

.c1 {
  width: 100%;
  background-color: #f2f5f8;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c2 {
  padding: 16px;
  overflow: auto;
  height: 100%;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #c0cfde;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  background-color: #f2f5f8;
}

@media (min-width:68.75em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    height: 100%;
    overflow: none;
  }
}

@media (min-width:68.75em) {
  .c1 {
    padding: 16px 0 16px 16px;
    -webkit-scroll-behavior: smooth;
    -moz-scroll-behavior: smooth;
    -ms-scroll-behavior: smooth;
    scroll-behavior: smooth;
    height: calc(100vh - 80px);
    margin: 0;
    box-shadow: none;
    width: 400px;
    max-width: 400px;
    min-width: 400px;
  }
}

@media (min-width:68.75em) {
  .c3 {
    max-width: 990px;
    margin-left: auto;
    margin-right: auto;
    padding: 16px;
    height: calc(100vh - 80px);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div>
          my side panel content
        </div>
      </div>
    </div>
    <div
      class="c3"
      height="80px"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            style="padding-left: 16px; color: rgb(212, 92, 100);"
          >
            <i
              aria-hidden="true"
              class="red warning sign icon"
            />
            <span
              style="padding-left: 16px;"
            >
              The template is missing 8 mandatory fields. 
              <span
                data-test-id="resolve-missing-fields"
                style="color: rgb(212, 92, 100); text-decoration: underline; cursor: pointer;"
              >
                Resolve
              </span>
            </span>
          </div>
          <div
            class="c6"
          >
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="ui fitted toggle checkbox"
                data-test-id="button-mode"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="checkbox"
                  value=""
                />
                <label />
              </div>
              <label
                style="padding-right: 16px; padding-left: 16px;"
              >
                Edit mode
              </label>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <div
            autocorrect="on"
            data-gramm="false"
            data-key="0"
            data-slate-editor="true"
            spellcheck="true"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word; width: 100%; height: 100%; flex-grow: 1;"
          >
            <div
              data-key="1"
              data-slate-object="block"
              style="position: relative;"
            >
              <span
                data-key="2"
                data-slate-object="text"
              >
                <span
                  data-offset-key="2:0"
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    some text 
                  </span>
                </span>
              </span>
              <span
                data-key="3"
                data-slate-void="true"
              >
                <span>
                  <var
                    class="c8"
                    data-key="3"
                    data-slate-object="inline"
                    data-test-id="var-trade.quantity"
                  >
                    600000
                  </var>
                </span>
              </span>
              <span
                data-key="5"
                data-slate-object="text"
              >
                <span
                  data-offset-key="5:0"
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TemplateWithSidePanel matches snapshot without a child element 1`] = `
<DocumentFragment>
  .c6 {
  background: rgba(148,109,192,0.4);
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  text-transform: uppercase;
}

.c3 {
  width: 100%;
  padding: 8px;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c4 {
  margin-left: auto;
}

.c5 {
  margin-top: 2px;
  padding: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #c0cfde;
  background-color: white;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
  height: 100%;
  width: 100%;
}

.c0 {
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  width: 100%;
  border-top: 1px solid #c0cfde;
  background-color: #f2f5f8;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  background-color: #f2f5f8;
}

@media (min-width:68.75em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    height: 100%;
    overflow: none;
  }
}

@media (min-width:68.75em) {
  .c1 {
    max-width: 990px;
    margin-left: auto;
    margin-right: auto;
    padding: 16px;
    height: calc(100vh - 80px);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      height="80px"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            style="padding-left: 16px; color: rgb(212, 92, 100);"
          >
            <i
              aria-hidden="true"
              class="red warning sign icon"
            />
            <span
              style="padding-left: 16px;"
            >
              The template is missing 8 mandatory fields. 
              <span
                data-test-id="resolve-missing-fields"
                style="color: rgb(212, 92, 100); text-decoration: underline; cursor: pointer;"
              >
                Resolve
              </span>
            </span>
          </div>
          <div
            class="c4"
          >
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="ui fitted toggle checkbox"
                data-test-id="button-mode"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="checkbox"
                  value=""
                />
                <label />
              </div>
              <label
                style="padding-right: 16px; padding-left: 16px;"
              >
                Edit mode
              </label>
            </div>
          </div>
        </div>
        <div
          class="c5"
        >
          <div
            autocorrect="on"
            data-gramm="false"
            data-key="14"
            data-slate-editor="true"
            spellcheck="true"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word; width: 100%; height: 100%; flex-grow: 1;"
          >
            <div
              data-key="15"
              data-slate-object="block"
              style="position: relative;"
            >
              <span
                data-key="16"
                data-slate-object="text"
              >
                <span
                  data-offset-key="16:0"
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    some text 
                  </span>
                </span>
              </span>
              <span
                data-key="17"
                data-slate-void="true"
              >
                <span>
                  <var
                    class="c6"
                    data-key="17"
                    data-slate-object="inline"
                    data-test-id="var-trade.quantity"
                  >
                    600000
                  </var>
                </span>
              </span>
              <span
                data-key="19"
                data-slate-object="text"
              >
                <span
                  data-offset-key="19:0"
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
